Mon Mar 28 01:58:51 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.h (Symbol::areaDef): Add.
	* symbol.c (symbolNew): Initialise Symbol::areaDef.
	(symbolFix): Add asserts. Area symbols are always STB_LOCAL. Non
	area symbols should have as st_shndx the section number where they
	are defined.
	* output.c (countRels): Removed.
	(writeElfSH): Fix area/section counting.  Add relocation section
	counting. Prefix relocation section names with ".rel." instead of ".rel".
	* reloc.c (relocELFOutput): Don't call armword() twice for the same
	word.

Sat Mar 26 12:44:29 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/smc.s: Add.
	* m_cpumem.c (getRhs): Follow API change.
	(m_swp): Add warning about deprecation.
	* m_cpu.c (dstlhsrhs, dstrhs, lhsrhs): Add bool return value.
	* get.c (getShift): Invert first parameter.
	(getRhs): Likewise.

Sat Mar 12 16:25:23 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (oDecodeTable): Add SMC/SMI.
	* m_cpuctrl.c, m_cpuctrl.h (m_smc): Add.

Thu Mar 10 00:45:15 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (oDecodeTable): Add DBG.
	* m_cpuctrl.c, m_cpuctrl.h (m_dbg): Add.
	* regression/tests_pass/dbg.s: Add.

Mon Feb 21 02:28:15 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/fpe_memory.s: Split of fp.s only containing
	the FPE memory related mnemonics. Use DCI instead of DCD.
	* regression/tests_pass/operator_index.s: Enabled disabled test lines.
	* regression/tests_pass/ldr_from_addr.s: Likewise.
	* regression/tests_pass/fpe.s: Renamed from fp.s.
	* regression/tests_pass/fpa_immediate.s: Renamed from fpa_immediate.s
	and addd -autocast test option.
	* regression/tests_pass/fpe_literal.s: Added.
	* commands.c (DefineInt_PrivData_t, DefineReal_PrivData_t): Move to
	commands.h.
	* m_fpu.c, m_fpu.h: Rename to m_fpe.c, m_fpe.h.
	* help_cop.c (DestMem_RelocUpdaterCoPro): Added.
	(help_copAddr): Support late definitions and literals.